QUINTA COMITIADA. CON EXCEPCIONES CARPETA CREADA DE FRONTED

--- a/fronted/index.html
+++ b/fronted/index.html
@@ -10,7 +10,9 @@
     <header>
         <h1>Clínica Odontológica</h1>
         <ul>
+            <li>Inicio</li>
             <li>Odontologos</li>
+            <li>Pacientes</li>
         </ul>
     </header>
 
