--- a/clinicaodontologica/src/main/resources/static/get_pacientes.html
+++ b/clinicaodontologica/src/main/resources/static/get_pacientes.html
@@ -132,6 +132,7 @@
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <script type="text/javascript" src="./js/get_paciente.js"></script>
+<script type="text/javascript" src="./js/delete_paciente.js"></script>
 
 </body>
 </html>
